CSS & JS/1.css
html,
body {
  scroll-behavior: smooth;
  scrollbar-width: thin;
}

body {
  background-color: var(--background-color);
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  height: 100vh;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --background-color: rgb(17, 17, 17);
  --name-text-color: wheat;
}
.name {
  position: absolute;
  height: 100%;
  width: 100%;
  display: grid;
  place-items: center;
  font-weight: lighter;
}
.welcome-message {
  text-align: center;
  animation: fadeIn 5s ease-in-out 1;
  font-size: 4rem;
  color: var(--name-text-color);
  text-shadow: 1px 1px 10px black;
  padding: 8%;
}

@keyframes fadeIn {
  from {
    transform: scale(0.3);
  }
  to {
    transform: scale(1);
  }
}

.span-name {
  font-weight: bolder;
  border-bottom: 3px dashed rgb(148, 255, 126);
  padding-bottom: 3px;
  font-size: 1.3em;
  color: rgb(148, 255, 126);
  /* font-style: italic; */
  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
  /* font-family: "Zen Tokyo Zoo", cursive; */
  /* font-family: "Otomanopee One", sans-serif; */
  /* font-family: "Marcellus SC", serif; */
  /* font-family: "Satisfy", cursive; */
  /* font-family: "Fredoka One", cursive; */
  font-family: "Merienda", cursive;
}
.name a {
  color: inherit;
  text-decoration: none;
}
.float {
  z-index: -1;
  /* border-radius: 50% 0 0 50%; */
  position: absolute;
  position: fixed;
  top: 50%;
  left: 50%;
  width: 80%;
  height: 100%;
  background-color: darkslategray;
  transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
  box-shadow: 2px 2px 10px green;
  animation: floatIn 5s ease-in-out infinite alternate;
}
@keyframes floatIn {
  0% {
    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
  }
  70% {
    transform: translate(-50%, -50%) rotate(0deg) scaleY(0.8);
  }
  90% {
    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
  }
}

@media (max-width: 550px) {
  .welcome-message {
    font-size: 1.3rem;
  }
}

